--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ header{
     margin: 0;
     text-decoration-line: none;
     right: 1%;
+    left: 90%;
     top: 20%;
     border: none;
     padding: 1px;
