--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ header{
     font-size: 80%;
 }
 .navbar{
-    margin: 0;
+    margin: 10px;
     padding-left: 10px;
     top: 40%;
     opacity: 50%;
@@ -258,6 +258,7 @@ ul li{
 
 h1 {
     margin: 0;
+    font-size: 24px;
 }
 
 
