--- a/css/style.css
+++ b/css/style.css
@@ -165,13 +165,67 @@ header{
     font-size: 80%;
 }
 .navbar{
-    margin: 10px;
-    padding-left: 10px;
+    margin: 0;
+    padding-left: 0;
     top: 40%;
     opacity: 50%;
     background-image:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3));
-
+    overflow: hidden;
 }
+/*.navbar a {
+    float: left;
+    display: block;
+    color: rgb(238, 231, 231);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }*/
+  
+  .navbar :hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+
+  .navbar .search-container {
+    float: right;
+  }
+  
+  .navbar input[type=text] {
+    padding: 3px;
+    margin-top: 4px;
+    font-size: 17px;
+    border: none;
+  }
+  
+  .navbar .sebtn {
+    float: right;
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .navbar .sebtn:hover {
+    background: #ccc;
+  }
+  .navbar input[type=text], .navbar .sebtn {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .navbar input[type=text] {
+    border: 1px solid #ccccccf3;  
+  }
+
+  
 ul{
     list-style-type: none ;
     margin : 0;
@@ -179,8 +233,10 @@ ul{
     
 }
 ul li{
-    display: inline-block;
-    padding-left: 15%;
+    display: block;
+    padding-left: 2%;
+    text-align: center;
+    padding: 14px 16px;
 }
 .container{
     width: 90%;
@@ -429,12 +485,12 @@ footer {
 }
 @media only screen and (max-width:813px) {
   /* For mobile phones: */
-  .menu, .container, .prod {
+  .menu, .container, .prod, .search-container, .navbar {
     width:80%;
   }
 }
 @media screen and (max-width:1250px){
-    .container ul li{
+    .container ul li, .search-container{
         width:40%;
         margin-left: 40px;
          
