--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header{
     color: #fff;
 }
 /* Add an active class to highlight the current page */
-.active {
+.actives {
     background-color:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.3));
     color: white;
     padding: 10px 20px;
@@ -77,7 +77,7 @@ header{
     border-radius: 8px;
   }
 
-  .active:hover{
+  .actives:hover{
     opacity: 0.5;
     color: #141313;
   }
