--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ header{
 }
 
 /* Product card styles (for the products page) */
-.container {
+.container, .products-container {
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -505,4 +505,54 @@ img {vertical-align: middle;}
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 100px) {
   .text {font-size: 8px}
+}
+
+
+
+/* ---------------Cart page--------------*/
+.products-container{
+  max-width: 650px;
+  justify-content: space-around;
+  margin: 0 auto;
+  
+}
+
+.product-header{
+  width: 100%;
+  max-width: 650px;
+  display: flex;
+  justify-content: flex-start;
+  border-bottom: 4px solid #5a5e5f;
+  margin: 0 auto;
+}
+
+.product-title{
+  width: 45%;
+}
+
+.price{
+  width: 15%;
+  display: flex;
+  align-items: center;
+}
+
+.quantity{
+  width: 30%;
+  display: flex;
+  align-items: center;
+}
+
+.total{
+  width: 10%;
+  display: flex;
+  align-items: center;
+}
+
+.product{
+  width: 45%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0;
+  border-bottom: 1px solid #5a5e5f;
 }
