--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+* { 
+  box-sizing: border-box; 
+}
 /* Reset some default styles */
 body, h1, h2, p {
     margin: 0;
@@ -442,14 +445,78 @@ header{
       }
   }
 
+  /*******Carousel styles************/
+  .scene {
+    border: 1px solid #CCC;
+    margin: 40px 0;
+    position: relative;
+    width: 210px;
+    height: 140px;
+    margin: 40px auto;
+    perspective: 1000px;
+    top: 50%;
+  }
+  
+  .carousel {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform: translateZ(-288px);
+    transform-style: preserve-3d;
+    transition: transform 1s;
+  }
+  
+  .carousel__cell {
+    position: absolute;
+    width: 190px;
+    height: 120px;
+    left: 10px;
+    top: 10px;
+    border: 2px solid black;
+    line-height: 116px;
+    font-size: 80px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+  }
+  
+  .carousel__cell:nth-child(9n+1) { background: hsla(  0, 100%, 50%, 0.8); }
+  .carousel__cell:nth-child(9n+2) { background: hsla( 40, 100%, 50%, 0.8); }
+  .carousel__cell:nth-child(9n+3) { background: hsla( 80, 100%, 50%, 0.8); }
+  .carousel__cell:nth-child(9n+4) { background: hsla(120, 100%, 50%, 0.8); }
+  .carousel__cell:nth-child(9n+5) { background: hsla(160, 100%, 50%, 0.8); }
+  .carousel__cell:nth-child(9n+6) { background: hsla(200, 100%, 50%, 0.8); }
+  .carousel__cell:nth-child(9n+7) { background: hsla(240, 100%, 50%, 0.8); }
+  .carousel__cell:nth-child(9n+8) { background: hsla(280, 100%, 50%, 0.8); }
+  .carousel__cell:nth-child(9n+0) { background: hsla(320, 100%, 50%, 0.8); }
+  
+  .carousel__cell:nth-child(1) { transform: rotateY(  0deg) translateZ(288px); }
+  .carousel__cell:nth-child(2) { transform: rotateY( 40deg) translateZ(288px); }
+  .carousel__cell:nth-child(3) { transform: rotateY( 80deg) translateZ(288px); }
+  .carousel__cell:nth-child(4) { transform: rotateY(120deg) translateZ(288px); }
+  .carousel__cell:nth-child(5) { transform: rotateY(160deg) translateZ(288px); }
+  .carousel__cell:nth-child(6) { transform: rotateY(200deg) translateZ(288px); }
+  .carousel__cell:nth-child(7) { transform: rotateY(240deg) translateZ(288px); }
+  .carousel__cell:nth-child(8) { transform: rotateY(280deg) translateZ(288px); }
+  .carousel__cell:nth-child(9) { transform: rotateY(320deg) translateZ(288px); }
+
+  .previous-button{
+    position: absolute;
+    top: 90%;
+  }
+   .next-button{
+    position: relative;
+    
+    top: 90%;
+   }
   /* slideshow styles */
-  * {box-sizing: border-box;}
+/*  * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
 
 /* Slideshow container */
-.slideshow-container {
+/*.slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
@@ -457,7 +524,7 @@ img {vertical-align: middle;}
 }
 
 /* Caption text */
-.text {
+/*.text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
@@ -468,7 +535,7 @@ img {vertical-align: middle;}
 }
 
 /* Number text (1/3 etc) */
-.numbertext {
+/*.numbertext {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
@@ -477,7 +544,7 @@ img {vertical-align: middle;}
 }
 
 /* The dots/bullets/indicators */
-.dot {
+/*.dot {
   height: 15px;
   width: 15px;
   margin: 0 2px;
@@ -492,15 +559,12 @@ img {vertical-align: middle;}
 }
 
 /* Fading animation */
-.fade {
+/*.fade {
   animation-name: fade;
   animation-duration: 2s;
-}
+}*/
 
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
+
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 100px) {
