--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,8 @@ header{
   .slides{
     width: 390px;
     height: 320px;
+    opacity: 90%;
+    border-radius: 8px;
   }
   
   .carousel__cell:nth-child(1) { transform: rotateY(  0deg) translateZ(588px); }
