--- a/css/style.css
+++ b/css/style.css
@@ -610,6 +610,7 @@ img {vertical-align: middle;}
   justify-content: flex-start;
   border-bottom: 4px solid #5a5e5f;
   margin: 0 auto;
+  position: relative;
 }
 
 .prod-title{
@@ -669,4 +670,25 @@ img {vertical-align: middle;}
 
 .basketTotal{
   width: 10%;
+}
+
+.buy{
+  margin-bottom: 20px;
+  padding-bottom: 39px;
+}
+
+#buy-now{
+  border: none;
+  background-color: #00ff6a;
+  color: #000;
+  padding: 0 0 0 0px;
+  margin-bottom: 9px;
+  text-decoration: none;
+  justify-content: space-around;
+  border-radius: 8px;
+  position:absolute;
+  text-align: center;
+  right: 45%;
+  top: 120%;
+  
 }
