--- a/css/style.css
+++ b/css/style.css
@@ -87,16 +87,24 @@ header{
 /* Search bar styles */
 
 .search-bar {
-    text-align: center;
-    margin: 2px 10;
+  display: flex;
+  justify-content: center;
+  padding: 24px;
 }
 
-.search-bar input[type="search"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 60%;
-    background: #fff url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
+.search-bar input{
+  width: 50%;
+  min-width: 300px;
+  padding: 12px 24px;
+  border-radius: 24px;
+  font-size: 16px;
+  border: 0px;
+  outline: none;
+}
+
+/*.search-bar [.container]::-webkit-list-button,
+.search-bar [.container]::-webkit-calendar-picker-indicator {
+  display: none !important;
 }
 
 
